<resources>
    <string name="app_name">OreoTracker</string>
    <string name="home">Recent Pukes</string>
    <string name="statistics">Statistics</string>
    <string name="exact_time_format">At %s</string>
    <string name="add_title">Add ThrowUp</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="exact_time">Exact Time</string>
    <string name="content">Content</string>
    <string name="save">Save</string>
    <string name="last_30_days">Last 30 Days (%d)</string>
    <string name="last_7_days">Last 7 Days (%d)</string>
    <string name="weight">Weight</string>
    <string name="weight_add">Add Weight</string>
    <string name="weight_add_me">My Weight</string>
    <string name="weight_add_ours">Our Weight</string>
    <string name="weight_total">Current Weight: %.1f</string>
</resources>
