<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_30_day_header"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/last_30_days"/>

    <TextView
        android:id="@+id/text_30_day_content_header"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_30_day_header"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:text="@string/content"/>

    <TextView
        android:id="@+id/text_30_day_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_30_day_content_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_middle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"/>
    
    <TextView
        android:id="@+id/text_30_day_time_header"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_30_day_header"
        app:layout_constraintStart_toStartOf="@+id/guideline_middle"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/time"/>

    <TextView
        android:id="@+id/text_30_day_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_30_day_time_header"
        app:layout_constraintStart_toEndOf="@+id/guideline_middle"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"/>

    <android.support.constraint.Barrier
        android:id="@+id/barrier_30_day"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="text_30_day_content,text_30_day_time"/>

    <TextView
        android:id="@+id/text_7_day_header"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/barrier_30_day"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/last_7_days"/>

    <TextView
        android:id="@+id/text_7_day_content_header"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_7_day_header"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:text="@string/content"/>

    <TextView
        android:id="@+id/text_7_day_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_7_day_content_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_middle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/text_7_day_time_header"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_7_day_header"
        app:layout_constraintStart_toStartOf="@+id/guideline_middle"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/time"/>

    <TextView
        android:id="@+id/text_7_day_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_7_day_time_header"
        app:layout_constraintStart_toEndOf="@+id/guideline_middle"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"/>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center"/>

</android.support.constraint.ConstraintLayout>